Revert "JS: Fix light text flickering on dark background"
This reverts commit a09908a0ccfbaaf82eee8808e32e37d38f06e8e5.

--- a/www/flowjspixi.css
+++ b/www/flowjspixi.css
@@ -109,7 +109,6 @@ svg {
 	direction: ltr;
 	text-align: left;
 	background: none;
-	transform: translateZ(0);
 }
 
 .focused {
